--- a/views/invitationCreate.edge
+++ b/views/invitationCreate.edge
@@ -19,9 +19,9 @@ crossorigin=""></script>
 <style>
 
     @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap');
-          @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap');
     
     .btn-primary
     {
@@ -173,7 +173,7 @@ crossorigin=""></script>
             <div class="form-group">
                 <input type="hidden" class="form-control" id="lng" name="lng" aria-describedby="mobile" placeholder="lng" required>
             </div>
-            
+            <h5 id="notice"> No access</h5>
             <input type="hidden" name="location" value="">
             
             <div id="map" class="mb-5 shadowme" style="width:100%; height:60vh;z-index:8"></div>
@@ -268,12 +268,25 @@ crossorigin=""></script>
 
             search.on('search:locationfound',
                     function(e) {
-                        console.log(e.latlng);
-                        marker.setLatLng([e.latlng.lat, e.latlng.lng]);
+                        if(map.hasLayer(marker)){
+
+                            marker.setLatLng([e.latlng.lat, e.latlng.lng]);
                             latt = e.latlng.lat;
                             lngg = e.latlng.lng;
                             document.getElementById('demo').innerHTML = "Latitude: " + latt + "<br>Longitude: " + lngg;
-                        });
+                        }
+                        else{
+                            marker = L.marker([e.latlng.lat, e.latlng.lng]).addTo(map)
+                                    .bindPopup('My location')
+                                                .openPopup();
+                                                latt = e.latlng.lat;
+                            lngg = e.latlng.lng;
+                            document.getElementById('demo').innerHTML = "Latitude: " + latt + "<br>Longitude: " + lngg;
+                     
+
+                        }
+
+                    });
                         
             map.addControl(search);
 
@@ -285,20 +298,12 @@ crossorigin=""></script>
            if (navigator.geolocation) {
                navigator.geolocation.getCurrentPosition(showPosition);
            } else { 
+               x = document.getElementById('notice');
                x.innerHTML = "Geolocation is not supported by this browser.";
            }
            
        } theLocation();
      
-       function getLocation() {
-           if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(showPosition2);
-           } else { 
-           x.innerHTML = "Geolocation is not supported by this browser.";
-           }
-           return false;
-       }
-            
     function showPosition(position) {
         latt = position.coords.latitude;
         lngg = position.coords.longitude;
